--- a/index.rmd
+++ b/index.rmd
@@ -9,6 +9,7 @@ output:
 # This is Wentong's awesome website
 
 Can put some markdown text here..
+how to build this?
 
 ![](https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif)
 
